--- a/A_dbms/templates/dbms/agree/agree/agree-filter.html
+++ b/A_dbms/templates/dbms/agree/agree/agree-filter.html
@@ -22,7 +22,9 @@
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
-    <label class="pull-right">
-        <a class="btn btn-success btn-sm" id="addAgree">添加合同</a>
-    </label>
+    {% if form_agree_add %}
+        <label class="pull-right">
+            <a class="btn btn-success btn-sm" id="addAgree">添加合同</a>
+        </label>
+    {% endif %}
 </div>
