--- a/A_dbms/templates/dbms/agree/extra/js-agree-del---.html
+++ b/A_dbms/templates/dbms/agree/extra/js-agree-del---.html
@@ -1,12 +1,12 @@
 <script>
     $(function () {
-        bindDelArticle();
+        bindDelArticleB();
         bindDelArticleModalOk();
 
     });
 
-    function bindDelArticle() {
-        $('#delArticle').click(function () {
+    function bindDelArticleB() {
+        $('#delArticleB').click(function () {
             console.log("binddelArticle")
             $('#delArticleModal').modal('show');
         })
