--- a/A_dbms/templates/dbms/agree/modl/agree-del-mod---.html
+++ b/A_dbms/templates/dbms/agree/modl/agree-del-mod---.html
@@ -3,8 +3,8 @@
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="delArticleModalLabel">
-                    删除项目<input style="display: none" id="articleDelId" value="{{ article_obj.id }}">
+                <h4 class="modal-title" id="delArticleModalLabel">删除项目
+                    <input style="display: none" id="articleDelId" value="{{ article_obj.id }}">
                 </h4>
             </div>
             <div class="modal-body">
