--- a/A_dbms/templates/dbms/agree/scan/agree-summry.html
+++ b/A_dbms/templates/dbms/agree/scan/agree-summry.html
@@ -3,8 +3,7 @@
         <label>合同情况</label>
         <label class="navbar-right">
             <a class="btn btn-primary btn-sm" target="_blank"
-               href="{% url 'dbms:agree_preview' agree_id=agree_obj.id %}">
-                预览 </a>
+               href="{% url 'dbms:agree_preview' agree_id=agree_obj.id %}">预览 </a>
             <a class="btn btn-primary btn-sm " id="addCounterB">添加反担保</a>
             <a class="btn btn-primary btn-sm " id="signAgreeB">签批</a>
             <a class="btn btn-primary btn-sm " id="editAgreeB">修改</a>
