--- a/A_dbms/templates/dbms/appraisal/appraisal.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}评审管理{% endblock %}
+{% block title %}{{ page_title }}{% endblock %}
 
 
 {% block right-content-container %}
