--- a/A_dbms/templates/dbms/custom/scan/custom-tab.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-tab.html
@@ -29,5 +29,7 @@
         {% endif %}
         <div role="tabpanel" class="tab-pane active" id="project_status"> <!--项目情况-->
             {% include 'dbms/custom/scan/tab/project_status.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="shareholder"> <!--股东信息-->
+            {% include 'dbms/custom/scan/tab/shareholder.html' %}</div>
     </div>
 </div>
