--- a/A_dbms/templates/dbms/meeting/modl/meeting-article-del-mod.html
+++ b/A_dbms/templates/dbms/meeting/modl/meeting-article-del-mod.html
@@ -11,7 +11,7 @@
             <div class="modal-body">是否确定取消该项目本次上会!!!</div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="delMeetingArticleModalOk"></button>
+                <button type="button" class="btn btn-primary" id="delMeetingArticleModalOk">确定</button>
             </div>
         </div>
     </div>
