--- a/A_dbms/templates/dbms/agree/agree.html
+++ b/A_dbms/templates/dbms/agree/agree.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}合同管理{% endblock %}
+{% block title %}{{ PAGE_TITAL }}{% endblock %}
 
 {% block right-content-container %}
     {% include 'dbms/agree/agree/agree-filter.html' %}
