--- a/A_dbms/templates/dbms/agree/agree/agree-table.html
+++ b/A_dbms/templates/dbms/agree/agree/agree-table.html
@@ -12,11 +12,9 @@
         </tr>
         </thead>
         <tbody>
-        {% for agree in p_list %}
+        {% for agree in p_agree_list %}
             <tr>
-                <td>
-                    <a href="{% url 'dbms:agree_scan' agree_id=agree.id %}">{{ agree.agree_num }}</a>
-                </td>
+                <td><a href="{% url 'dbms:agree_scan' agree_id=agree.id %}">{{ agree.agree_num }}</a></td>
                 <td>{{ agree.lending.summary.custom }}</td>
                 <td>{{ agree.branch.name }}</td>
                 <td>{{ agree.agree_amount }}</td>
