--- a/A_dbms/templates/dbms/agree/modl/counter-add-mod.html
+++ b/A_dbms/templates/dbms/agree/modl/counter-add-mod.html
@@ -6,8 +6,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="addCounterModalLabel">
-                    添加反担保合同
+                <h4 class="modal-title" id="addCounterModalLabel">添加反担保合同
                     <input name="agree_id" value="{{ agree_obj.id }}" style="display: none">
                 </h4>
             </div>
