--- a/A_dbms/templates/dbms/appraisal/appraisal-scan-lending.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal-scan-lending.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}{{ lending_obj }}{% endblock %}
+{% block title %}{{ page_title }}:{{ lending_obj }}{% endblock %}
 
 {% block right-content-container %}
     <div class="container-fluid" style="padding-left: 1px;">
