--- a/A_dbms/templates/dbms/appraisal/appraisal-scan.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal-scan.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}{{ article_obj }}{% endblock %}
+{% block title %}{{ page_title }}:{{ article_obj }}{% endblock %}
 
 {% block right-content-container %}
 
