--- a/A_dbms/templates/dbms/appraisal/lending/tab/counter-ground.html
+++ b/A_dbms/templates/dbms/appraisal/lending/tab/counter-ground.html
@@ -13,7 +13,7 @@
             <th>土地地址</th>
             <th>土地用途</th>
             <th>土地面积</th>
-            {% if counter_operate %}
+            {% if page_title == '放款次序' %}
                 <th>操作</th>
             {% endif %}
         </tr>
@@ -28,7 +28,7 @@
                         <td>{{ warrant.ground_warrant.ground_locate }}</td>
                         <td>{{ warrant.ground_warrant.get_ground_app_display }}</td>
                         <td>{{ warrant.ground_warrant.ground_area }}</td>
-                        {% if counter_operate %}
+                        {% if page_title == '放款次序' %}
                             <td><a class="btn btn-danger btn-xs delGuaranteeB">删除</a></td>
                         {% endif %}
                     </tr>
