--- a/A_dbms/templates/dbms/appraisal/scan/tab/comment.html
+++ b/A_dbms/templates/dbms/appraisal/scan/tab/comment.html
@@ -11,7 +11,7 @@
             <th>评审委员</th>
             <th>评委意见</th>
             <th>意见详情</th>
-            {% if comment_operate %}
+            {% if page_title == '项目评审' %}
                 <th>操作</th>
             {% endif %}
         </tr>
@@ -34,7 +34,7 @@
                         {% endif %}
                     {% endfor %}
                 </td>
-                {% if comment_operate %}
+                {% if page_title == '项目评审' %}
                     <td><a class="btn btn-primary btn-xs expert-comment">评审意见</a></td>
                 {% endif %}
             </tr>
