--- a/A_dbms/templates/dbms/appraisal/scan/tab/single.html
+++ b/A_dbms/templates/dbms/appraisal/scan/tab/single.html
@@ -12,7 +12,7 @@
             <th>授信额度（元）</th>
             <th>费率（%）</th>
             <th>放款金额</th>
-            {% if single_operate %}
+            {% if page_title == '项目评审' %}
                 <th>操作</th>
             {% endif %}
         </tr>
@@ -24,7 +24,7 @@
                 <td>{{ single.credit_amount }}</td>
                 <td>{{ single.flow_rate }}</td>
                 <td>{{ single.amount }}</td>
-                {% if single_operate %}
+                {% if page_title == '项目评审' %}
                     <td><a class="btn btn-danger btn-xs delSingleQuotaB">删除</a></td>
                 {% endif %}
             <tr>
