--- a/A_dbms/templates/dbms/provide/modl/provide-add-mod.html
+++ b/A_dbms/templates/dbms/provide/modl/provide-add-mod.html
@@ -6,8 +6,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="addProvideModalLabel">
-                    放款
+                <h4 class="modal-title" id="addProvideModalLabel">放款
                     <input style="display: none" name="notify_id" id="id_notify_id" value={{ notify_obj.id }}>
                 </h4>
             </div>
@@ -16,7 +15,6 @@
                     {% include 'dbms/provide/modl/mod_form/provide-add.html' %}
                 </form>
             </div>
-
             <label id="formErrors"></label>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
