--- a/A_dbms/templates/dbms/provide/provide-agree-scan.html
+++ b/A_dbms/templates/dbms/provide/provide-agree-scan.html
@@ -1,11 +1,11 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}{{ agree_obj }}{% endblock %}
+{% block title %}{{ PAGE_TITAL }}：{{ agree_obj }}{% endblock %}
 
 {% block right-content-container %}
     <div class="container-fluid" style="padding-left: 1px;">
-        {% include 'dbms/provide/agreep_scan/agreep-summry.html' %}
-        {% include 'dbms/provide/agreep_scan/agreep-tab.html' %}
+        {% include 'dbms/provide/agree/scan/agree-summry.html' %}
+        {% include 'dbms/provide/agree/scan/agree-tab.html' %}
         {% include 'dbms/provide/modl/notify-add-mod.html' %}
         {% include 'dbms/provide/modl/notify-del-mod.html' %}
     </div>
