--- a/A_dbms/templates/dbms/warrant/agree/warrant-agree-table.html
+++ b/A_dbms/templates/dbms/warrant/agree/warrant-agree-table.html
@@ -1,11 +1,5 @@
 <div class="table-responsive">
-    {#"table-responsive":表格响应式布局#}
-    <table class="table table-bordered table-hover
-                table-condensed active">
-        {#"table-bordered":表格表格边框#}
-        {#"table-hover":表格悬停变色#}
-        {#"table-condensed":表格紧缩#}
-        {#<caption><h4>项目管理</h4></caption>#}
+    <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
             <th>合同编号</th>
@@ -18,13 +12,9 @@
         </tr>
         </thead>
         <tbody>
-        {% for agree in p_list %}
+        {% for agree in p_agree_list %}
             <tr>
-                <td>
-                    <a href="{% url 'dbms:agreep_scan' agree_id=agree.id %}">
-                        {{ agree.agree_num }}
-                    </a>
-                </td>
+                <td><a href="{% url 'dbms:warrant_agree_scan' agree_id=agree.id %}">{{ agree.agree_num }}</a></td>
                 <td>{{ agree.lending.summary.custom }}</td>
                 <td>{{ agree.branch.name }}</td>
                 <td>{{ agree.agree_amount }}</td>
