--- a/A_dbms/templates/dbms/warrant/house.html
+++ b/A_dbms/templates/dbms/warrant/house.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}权证管理{% endblock %}
+{% block title %}{{ PAGE_TITAL }}{% endblock %}
 
 
 {% block right-content-container %}
