--- a/A_dbms/templates/dbms/provide/extra/js-provide-add.html
+++ b/A_dbms/templates/dbms/provide/extra/js-provide-add.html
@@ -23,7 +23,7 @@
             var postDataStr = JSON.stringify(postData);
             console.log(postDataStr);
             $.ajax({
-                url: '/dbms/provide/provide/add/',
+                url: '/dbms/provide/add/',
                 type: 'POST',
                 traditional: true,
                 data: {'postDataStr': postDataStr},
