--- a/A_dbms/templates/dbms/provide/modl/notify-del-mod.html
+++ b/A_dbms/templates/dbms/provide/modl/notify-del-mod.html
@@ -3,9 +3,8 @@
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="delNotifyModalLabel">
-                    删除放款通知
-                    <input style="display: none" name="agree_id" id="id_warrant_id" value={{ agree_obj.id }}>
+                <h4 class="modal-title" id="delNotifyModalLabel">删除放款通知
+                    <input style="display: none" name="agree_id" id="id_agree_id" value={{ agree_obj.id }}>
                     <input style="display: none" name="notify_id" id="delNotifyModalId">
                 </h4>
             </div>
