--- a/A_dbms/templates/dbms/provide/provide_scan/provide-tab.html
+++ b/A_dbms/templates/dbms/provide/provide_scan/provide-tab.html
@@ -2,14 +2,14 @@
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
         <li role="presentation" class="active">
-            <a href="#repayments" style="background-color: #f5f5f5" aria-controls="home" role="tab" data-toggle="tab">
-                还款 </a></li>
+            <a href="#repayments" style="background-color: #f5f5f5" aria-controls="home" role="tab"
+               data-toggle="tab">还款 </a></li>
         <li role="presentation" class="active">
-            <a href="#pigeonhole" style="background-color: #f5f5f5" aria-controls="home" role="tab" data-toggle="tab">
-                归档 </a></li>
+            <a href="#pigeonhole" style="background-color: #f5f5f5" aria-controls="home" role="tab"
+               data-toggle="tab">归档 </a></li>
         <li role="presentation" class="active">
-            <a href="#compensatory" style="background-color: #f5f5f5" aria-controls="home" role="tab" data-toggle="tab">
-                代偿 </a></li>
+            <a href="#compensatory" style="background-color: #f5f5f5" aria-controls="home" role="tab" data-toggle="tab">代偿 </a>
+        </li>
     </ul>
 
     <!-- Tab panes -->
