--- a/A_dbms/templates/dbms/custom/custom.html
+++ b/A_dbms/templates/dbms/custom/custom.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}客户管理{% endblock %}
+{% block title %}{{ PAGE_TITLE }}{% endblock %}
 
 
 {% block right-content-container %}
