--- a/A_dbms/templates/dbms/provide/agree/scan/provide-agree-tab.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/provide-agree-tab.html
@@ -4,7 +4,7 @@
         <li role="presentation">
             <a href="#provide-agree" style="background-color: #f5f5f5"
                aria-controls="messages" role="tab" data-toggle="tab">合同</a></li>
-        <li role="presentation" class="active">
+        <li role="presentation">
             <a href="#provide-hypothec" style="background-color: #f5f5f5"
                aria-controls="messages" role="tab" data-toggle="tab">他权</a></li>
         <li role="presentation">
@@ -19,13 +19,16 @@
         <li role="presentation">
             <a href="#provide-stock " style="background-color: #f5f5f5"
                aria-controls="home" role="tab" data-toggle="tab">股权</a></li>
+        <li role="presentation" class="active">
+            <a href="#loan-notice " style="background-color: #f5f5f5"
+               aria-controls="home" role="tab" data-toggle="tab">放款通知</a></li>
     </ul>
 
     <!-- Tab panes -->
     <div class="tab-content" id="agree-warrant">
         <div role="tabpanel" class="tab-pane" id="provide-agree"><!--合同-->
             {% include 'dbms/agree/scan/tab/agree-counters.html' %}</div>
-        <div role="tabpanel" class="tab-pane active" id="provide-hypothec"><!--他权-->
+        <div role="tabpanel" class="tab-pane" id="provide-hypothec"><!--他权-->
             {% include 'dbms/warrant/agree/scan/tab/agree-hypothec.html' %}</div>
         <div role="tabpanel" class="tab-pane" id="provide-house"><!--房产反担保-->
             {% include 'dbms/warrant/agree/scan/tab/agree-house.html' %}</div>
@@ -35,5 +38,7 @@
             {% include 'dbms/warrant/agree/scan/tab/agree-receive.html' %}</div>
         <div role="tabpanel" class="tab-pane" id="provide-stock"><!--股权质押-->
             {% include 'dbms/warrant/agree/scan/tab/agree-stock.html' %}</div>
+        <div role="tabpanel" class="tab-pane active" id="loan-notice"><!--放款通知-->
+            {% include 'dbms/provide/agree/scan/tab/loan-notice.html' %}</div>
     </div>
 </div>
