--- a/A_dbms/templates/dbms/provide/provide-agree-notify.html
+++ b/A_dbms/templates/dbms/provide/provide-agree-notify.html
@@ -1,12 +1,12 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}{{ notify_obj }}{% endblock %}
+{% block title %}{{ PAGE_TITLE }}：{{ agree_obj }}{% endblock %}
 
 {% block right-content-container %}
     <div class="container-fluid" style="padding-left: 1px;">
-        {% include 'dbms/provide/notify/notify-summry.html' %}
-        {% include 'dbms/provide/agreep_scan/agreep-tab.html' %}
-        {% include 'dbms/provide/notify/agreep-notify-tab.html' %}
+        {% include 'dbms/provide/agree/notify/provide-notify-summry.html' %}
+        {% include 'dbms/provide/agree/scan/provide-agree-tab.html' %}
+        {% include 'dbms/provide/agree/notify/provide-notify-tab.html' %}
         {% include 'dbms/provide/modl/provide-add-mod.html' %}
     </div>
 {% endblock %}
