--- a/A_dbms/templates/dbms/warrant/agree/scan/tab/agree-ground.html
+++ b/A_dbms/templates/dbms/warrant/agree/scan/tab/agree-ground.html
@@ -16,7 +16,7 @@
             <th>土地用途</th>
             <th>他权情况</th>
             <th>入库情况</th>
-            {% if page_title == '权证管理' %}
+            {% if PAGE_TITAL == '权证管理' %}
                 <th>操作</th>
             {% endif %}
         </tr>
@@ -26,26 +26,26 @@
             {% if lending_sure.sure_typ in ground_list %}
                 {% for warrant in lending_sure.warrant_sure.warrant.all %}
                     <tr warrant-nid={{ warrant.id }}>
-                        <td><a target="_blank"
-                               href="{% url 'dbms:warrant_scan' warrant_id=warrant.id %}">{{ forloop.counter }}</a></td>
+                        <td>{{ forloop.counter }}</td>
                         <td>{{ lending_sure.get_sure_typ_display }}</td>
                         <td>
                             {% for ownership in warrant.ownership_warrant.all %}
                                 {{ ownership.owner }}{% if not forloop.last %}、{% endif %}
                             {% endfor %}
                         </td>
-                        <td>{{ warrant.ground_warrant.ground_locate }}</td>
+                        <td><a target="_blank" href="{% url 'dbms:warrant_scan' warrant_id=warrant.id %}">
+                            {{ warrant.ground_warrant.ground_locate }}</a></td>
                         <td>{{ warrant.ground_warrant.ground_area }}</td>
                         <td>{{ warrant.ground_warrant.get_ground_app_display }}</td>
                         <td>
                             {% for ypothec in warrant.ypothec_m_agree.all %}
                                 {% if ypothec.agree.id == agree_obj.id %}
-                                    {{ ypothec.warrant.get_warrant_state_display }}
+                                    {{ ypothec.warrant }}
                                 {% endif %}
                             {% endfor %}
                         </td>
                         <td>{{ warrant.get_warrant_state_display }}</td>
-                        {% if page_title == '权证管理' %}
+                        {% if PAGE_TITAL == '权证管理' %}
                             <td><a class="btn btn-danger btn-xs addStoragesAgreeB">出入库</a></td>
                         {% endif %}
                     </tr>
