--- a/A_dbms/templates/dbms/warrant/agree/scan/tab/agree-house.html
+++ b/A_dbms/templates/dbms/warrant/agree/scan/tab/agree-house.html
@@ -8,13 +8,15 @@
         {#<caption><h4>项目管理</h4></caption>#}
         <thead>
         <tr style="text-align: center">
+            <th>序号</th>
             <th>担保方式</th>
-            <th>房产编号</th>
-            <th>房产地址</th>
-            <th>房产用途</th>
-            <th>房产面积</th>
+            <th>所有权人</th>
+            <th>土地地址</th>
+            <th>土地面积</th>
+            <th>土地用途</th>
+            <th>他权情况</th>
             <th>入库情况</th>
-            {% if page_title == '权证管理' %}
+            {% if PAGE_TITAL == '权证管理' %}
                 <th>操作</th>
             {% endif %}
 
@@ -25,13 +27,26 @@
             {% if lending_sure.sure_typ in house_list %}
                 {% for warrant in lending_sure.warrant_sure.warrant.all %}
                     <tr warrant-nid={{ warrant.id }}>
+                        <td>{{ forloop.counter }}</td>
                         <td>{{ lending_sure.get_sure_typ_display }}</td>
-                        <td>{{ warrant.warrant_num }}</td>
-                        <td>{{ warrant.house_warrant.house_locate }}</td>
-                        <td>{{ warrant.house_warrant.get_house_app_display }}</td>
+                        <td>
+                            {% for ownership in warrant.ownership_warrant.all %}
+                                {{ ownership.owner }}{% if not forloop.last %}、{% endif %}
+                            {% endfor %}
+                        </td>
+                        <td><a target="_blank" href="{% url 'dbms:warrant_scan' warrant_id=warrant.id %}">
+                            {{ warrant.house_warrant.house_locate }}</a></td>
                         <td>{{ warrant.house_warrant.house_area }}</td>
+                        <td>{{ warrant.house_warrant.get_house_app_display }}</td>
+                        <td>
+                            {% for ypothec in warrant.ypothec_m_agree.all %}
+                                {% if ypothec.agree.id == agree_obj.id %}
+                                    {{ ypothec.warrant }}
+                                {% endif %}
+                            {% endfor %}
+                        </td>
                         <td>{{ warrant.get_warrant_state_display }}</td>
-                        {% if page_title == '权证管理' %}
+                        {% if PAGE_TITAL == '权证管理' %}
                             <td><a class="btn btn-danger btn-xs addStoragesAgreeB">出入库</a></td>
                         {% endif %}
                     </tr>
