--- a/A_dbms/templates/dbms/agree/agree-scan.html
+++ b/A_dbms/templates/dbms/agree/agree-scan.html
@@ -8,6 +8,7 @@
         {% include 'dbms/agree/scan/agree-summry.html' %}
         {% include 'dbms/agree/scan/agree-tab.html' %}
         {% include 'dbms/agree/modl/counter-add-mod.html' %}
+        {% include 'dbms/agree/modl/chounter-del-mod.html' %}
         {% include 'dbms/agree/modl/agree-sign-mod.html' %}
         {% include 'dbms/agree/modl/agree-del-mod---.html' %}
     </div>
@@ -15,6 +16,7 @@
 
 {% block extra-js %}
     {% include 'dbms/agree/extra/js-counter-add.html' %}
+    {% include 'dbms/agree/extra/js-counter-del.html' %}
     {% include 'dbms/agree/extra/js-agree-sign.html' %}
     {% include 'dbms/agree/extra/js-agree-edit---.html' %}
     {% include 'dbms/agree/extra/js-agree-del---.html' %}
