--- a/A_dbms/templates/dbms/article/article-scan-agree.html
+++ b/A_dbms/templates/dbms/article/article-scan-agree.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}查看项目{% endblock %}
+{% block title %}{{ PAGE_TITLE }}：{{ agree_obj }}{% endblock %}
 
 {% block right-content-container %}
 
