--- a/A_dbms/templates/dbms/provide/provide.html
+++ b/A_dbms/templates/dbms/provide/provide.html
@@ -1,7 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}放款列表{% endblock %}
-
+{% block title %}{{ PAGE_TITLE }}{% endblock %}
 
 {% block right-content-container %}
     {% include 'dbms/provide/provide/provide-filter.html' %}
@@ -9,7 +8,5 @@
 {% endblock %}
 
 {% block extra-js %}
-
-
 
 {% endblock %}
