--- a/A_dbms/templates/dbms/article/agree/article-agree-tab.html
+++ b/A_dbms/templates/dbms/article/agree/article-agree-tab.html
@@ -1,13 +1,33 @@
 <div>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
-        <li role="presentation" class="active">
+        <li role="presentation">
             <a href="#counter" style="background-color: #f5f5f5"
-               aria-controls="profile" role="tab" data-toggle="tab">反担保</a></li>
+               aria-controls="profile" role="tab" data-toggle="tab">反担保合同</a></li>
+        <li role="presentation">
+            <a href="#counter-ensure" style="background-color: #f5f5f5"
+               aria-controls="profile" role="tab" data-toggle="tab">保证</a></li>
+        <li role="presentation">
+            <a href="#agree-hypothec" style="background-color: #f5f5f5"
+               aria-controls="profile" role="tab" data-toggle="tab">他权</a></li>
+        <li role="presentation">
+            <a href="#agree-house" style="background-color: #f5f5f5"
+               aria-controls="messages" role="tab" data-toggle="tab">房产</a></li>
+        <li role="presentation">
+            <a href="#agree-ground" style="background-color: #f5f5f5"
+               aria-controls="messages" role="tab" data-toggle="tab">土地</a></li>
+        <li role="presentation">
+            <a href="#agree-receive" style="background-color: #f5f5f5"
+               aria-controls="settings" role="tab" data-toggle="tab">应收</a></li>
+        <li role="presentation">
+            <a href="#agree-stock " style="background-color: #f5f5f5"
+               aria-controls="home" role="tab" data-toggle="tab">股权</a></li>
+
+
         <li role="presentation">
             <a href="#charge" style="background-color: #f5f5f5"
                aria-controls="messages" role="tab" data-toggle="tab">收费</a></li>
-        <li role="presentation">
+        <li role="presentation" class="active">
             <a href="#provide" style="background-color: #f5f5f5"
                aria-controls="messages" role="tab" data-toggle="tab">放款</a></li>
         <li role="presentation">
@@ -19,11 +39,29 @@
     </ul>
     <!-- Tab panes -->
     <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active" id="counter"><!--反担保-->
+        <div role="tabpanel" class="tab-pane" id="counter"><!--反担保合同-->
             {% include 'dbms/article/agree/tab/counter.html' %} </div>
+
+        <div role="tabpanel" class="tab-pane" id="counter-ensure"><!--保证-->
+            {% include 'dbms/appraisal/lending/tab/counter-ensure.html' %}</div>
+
+        <div role="tabpanel" class="tab-pane" id="agree-hypothec"><!--他权-->
+            {% include 'dbms/warrant/agree/scan/tab/agree-hypothec.html' %}</div>
+
+        <div role="tabpanel" class="tab-pane" id="agree-hypothec"><!--他权-->
+            {% include 'dbms/warrant/agree/scan/tab/agree-hypothec.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="agree-house"><!--房产反担保-->
+            {% include 'dbms/warrant/agree/scan/tab/agree-house.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="agree-ground"><!--土地反担保-->
+            {% include 'dbms/warrant/agree/scan/tab/agree-ground.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="agree-receive"><!--应收质押-->
+            {% include 'dbms/warrant/agree/scan/tab/agree-receive.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="agree-stock"><!--股权质押-->
+            {% include 'dbms/warrant/agree/scan/tab/agree-stock.html' %}</div>
+
         <div role="tabpanel" class="tab-pane" id="charge"><!--收费-->
             {% include 'dbms/article/agree/tab/charge.html' %} </div>
-        <div role="tabpanel" class="tab-pane" id="provide"><!--放款-->
+        <div role="tabpanel" class="tab-pane active" id="provide"><!--放款-->
             {% include 'dbms/article/agree/tab/provide.html' %}</div>
         <div role="tabpanel" class="tab-pane" id="repayment"><!--还款-->
             {% include 'dbms/article/agree/tab/repayment.html' %}</div>
