--- a/A_dbms/templates/dbms/article/scan/tab/lending.html
+++ b/A_dbms/templates/dbms/article/scan/tab/lending.html
@@ -16,28 +16,7 @@
         <tbody>
         {% for lending in article_obj.lending_summary.all %}
             <tr>
-                {% if lending_id %}
-                    {% if lending.id == lending_id %}
-                        <td>
-                            <a href="{% url 'dbms:article_scan_lending' article_id=article_obj.id lending_id=lending.id %}">
-                                {{ lending.get_order_display }}*
-                            </a>
-                        </td>
-                    {% else %}
-                        <td>
-                            <a href="{% url 'dbms:article_scan_lending' article_id=article_obj.id lending_id=lending.id %}">
-                                {{ lending.get_order_display }}
-                            </a>
-                        </td>
-                    {% endif %}
-                {% else %}
-                    <td>
-                        <a href="{% url 'dbms:article_scan_lending' article_id=article_obj.id lending_id=lending.id %}">
-                            {{ lending.get_order_display }}
-                        </a>
-                    </td>
-                {% endif %}
-
+                <td>{{ lending.get_order_display }}</td>
                 <td>{{ lending.order_amount }}</td>
                 <td>{{ lending.amount }}</td>
             <tr>
