--- a/A_dbms/templates/dbms/provide/agree/scan/tab/loan-notice.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/tab/loan-notice.html
@@ -10,7 +10,9 @@
             <th>备注</th>
             <th>操作人员</th>
             <th>已放款金额</th>
-            <th>操作</th>
+            {% if PAGE_TITLE == '放款管理' %}
+                <th>操作</th>
+            {% endif %}
         </tr>
         </thead>
         <tbody id="provide-notify-tb">
@@ -35,7 +37,9 @@
                 <td>{{ notify.remark }}</td>
                 <td>{{ notify.notifyor.name }}</td>
                 <td>{{ notify.notify_provide_sum }}</td>
-                <td><a class="btn btn-danger btn-xs delNotifyB">删除</a></td>
+                {% if PAGE_TITLE == '放款管理' %}
+                    <td><a class="btn btn-danger btn-xs delNotifyB">删除</a></td>
+                {% endif %}
             <tr>
         {% endfor %}
         </tbody>
