--- a/A_dbms/templates/dbms/provide/provide-scan.html
+++ b/A_dbms/templates/dbms/provide/provide-scan.html
@@ -1,16 +1,16 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}{{ agree_obj }}{% endblock %}
+{% block title %}{{ PAGE_TITLE }}{% endblock %}
 
 {% block right-content-container %}
 
     <div class="container-fluid" style="padding-left: 1px;">
         {% include 'dbms/provide/provide_scan/provide-summry.html' %}
         {% include 'dbms/provide/provide_scan/provide-tab.html' %}
+        {% include 'dbms/provide/modl/repayment-add-mod.html' %}
     </div>
 {% endblock %}
 
 {% block extra-js %}
-
-
+    {% include 'dbms/provide/extra/js-repayment-add.html' %}
 {% endblock %}
