--- a/A_dbms/templates/dbms/provide/provide/provide-table.html
+++ b/A_dbms/templates/dbms/provide/provide/provide-table.html
@@ -1,31 +1,33 @@
 <div class="table-responsive">
-    {#"table-responsive":表格响应式布局#}
-    <table class="table table-bordered table-hover
-                table-condensed active">
+    <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
             <th>序号</th>
             <th>客户名称</th>
             <th>放款银行</th>
+            <th>委托保证合同</th>
             <th>放款金额</th>
             <th>放款种类</th>
             <th>放款日期</th>
             <th>到期日</th>
+            <th>还款金额</th>
             <th>归档状态</th>
             <th>状态</th>
         </tr>
         </thead>
         <tbody>
-        {% for provide in p_list %}
+        {% for provide in provide_p_list %}
             <tr>
                 <td><a href="{% url 'dbms:provide_scan' provide_id=provide.id %}">
                     {{ forloop.counter }} </a></td>
                 <td>{{ provide.notify.agree.lending.summary.custom }}</td>
                 <td>{{ provide.notify.agree.branch }}</td>
+                <td>{{ provide.notify.agree.agree_num }}</td>
                 <td>{{ provide.provide_money }}</td>
                 <td>{{ provide.get_provide_typ_display }}</td>
                 <td>{{ provide.provide_date }}</td>
                 <td>{{ provide.due_date }}</td>
+                <td>{{ provide.provide_repayment_sum }}</td>
                 <td>{{ provide.get_implement_display }}</td>
                 <td>{{ provide.get_provide_status_display }}</td>
             <tr>
