--- a/A_dbms/templates/dbms/provide/scan/provide-tab.html
+++ b/A_dbms/templates/dbms/provide/scan/provide-tab.html
@@ -5,7 +5,7 @@
             <a href="#provide-article" style="background-color: #f5f5f5" aria-controls="home" role="tab"
                data-toggle="tab">项目情况 </a></li>
         <li role="presentation" class="active">
-            <a href="#provide-repayment" style="background-color: #f5f5f5" aria-controls="home" role="tab"
+            <a href="#repayments" style="background-color: #f5f5f5" aria-controls="home" role="tab"
                data-toggle="tab">还款 </a></li>
         <li role="presentation">
             <a href="#pigeonhole" style="background-color: #f5f5f5" aria-controls="home" role="tab"
@@ -17,7 +17,7 @@
 
     <!-- Tab panes -->
     <div class="tab-content">
-        <div role="presentation" class="tab-pane active" id="provide-repayment"> <!--还款-->
-            {% include 'dbms/provide/scan/tab/provide-repayment.html' %} </div>
+        <div role="presentation" class="tab-pane active" id="repayments"> <!--还款-->
+            {% include 'dbms/provide/provide_scan/tab/agree-provide.html' %} </div>
     </div>
 </div>
