--- a/A_dbms/templates/dbms/warrant/agree/scan/tab/agree-ground.html
+++ b/A_dbms/templates/dbms/warrant/agree/scan/tab/agree-ground.html
@@ -26,15 +26,15 @@
             {% if lending_sure.sure_typ in ground_list %}
                 {% for warrant in lending_sure.warrant_sure.warrant.all %}
                     <tr warrant-nid={{ warrant.id }}>
-                        <td>{{ forloop.counter }}</td>
+                        <td><a target="_blank" href="{% url 'dbms:warrant_scan' warrant_id=warrant.id %}">
+                            {{ forloop.counter }}</a></td>
                         <td>{{ lending_sure.get_sure_typ_display }}</td>
                         <td>
                             {% for ownership in warrant.ownership_warrant.all %}
                                 {{ ownership.owner }}{% if not forloop.last %}、{% endif %}
                             {% endfor %}
                         </td>
-                        <td><a target="_blank" href="{% url 'dbms:warrant_scan' warrant_id=warrant.id %}">
-                            {{ warrant.ground_warrant.ground_locate }}</a></td>
+                        <td>{{ warrant.ground_warrant.ground_locate }}</td>
                         <td>{{ warrant.ground_warrant.ground_area }}</td>
                         <td>{{ warrant.ground_warrant.get_ground_app_display }}</td>
                         <td>
