--- a/A_dbms/templates/dbms/provide/provide-agree-notify.html
+++ b/A_dbms/templates/dbms/provide/provide-agree-notify.html
@@ -8,9 +8,11 @@
         {% include 'dbms/provide/agree/scan/provide-agree-tab.html' %}
         {% include 'dbms/provide/agree/notify/provide-notify-tab.html' %}
         {% include 'dbms/provide/modl/provide-add-mod.html' %}
+        {% include 'dbms/provide/modl/provide-del-mod.html' %}
     </div>
 {% endblock %}
 
 {% block extra-js %}
     {% include 'dbms/provide/extra/js-provide-add.html' %}
+    {% include 'dbms/provide/extra/js-provide-del.html' %}
 {% endblock %}
